изменен формат ответа на получение девайса + исправлен запрос на изменение девайса
