# docs/swagger.json
@@ -252,6 +252,9 @@
                         "imei": {
                             "type": "string"
                         },
+                        "is_connected": {
+                            "type": "boolean"
+                        },
                         "name": {
                             "type": "string"
                         },
@@ -319,7 +322,33 @@
                 "devices": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/deviceController.Device"
+                        "type": "object",
+                        "properties": {
+                            "created_at": {
+                                "type": "string"
+                            },
+                            "id": {
+                                "type": "string"
+                            },
+                            "imei": {
+                                "type": "string"
+                            },
+                            "is_connected": {
+                                "type": "boolean"
+                            },
+                            "name": {
+                                "type": "string"
+                            },
+                            "os_version": {
+                                "type": "string"
+                            },
+                            "type": {
+                                "type": "string"
+                            },
+                            "updated_at": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -339,6 +368,12 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "os_version": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
